# roboadvisor-strategies

./: .gitignore  CLAUDE.md  README.md  ROBOADVISOR_REQUIREMENTS.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
backend/: README.md  SP data.xlsx  TREND_data.xlsx  pyproject.toml
backend/analysis/: sensitivity_regression.py
backend/app/: main.py
backend/app/api/: health.py  instruments.py  live.py  robo_advisor.py  simulator.py  strategies.py
backend/app/core/: config.py  palette.py  registry.py
backend/app/robo_advisor/backtest/: benchmarks.py  engine.py  metrics.py  result.py
backend/app/robo_advisor/overlay/: __init__.py  constructor.py  mapping.py  rules.py  signal_builder.py
backend/app/robo_advisor/strategies/: base.py  (+3 more)
backend/app/schemas/: common.py  live.py  results.py
backend/app/services/: instrument_service.py  live_instrument_service.py  metadata_service.py  signal_service.py  simulator_service.py
backend/app/strategies/: base.py  counter_trend.py  pairs_trading.py  trend_following.py  vol_analysis.py
backend/config/: backtest.yaml  overlay.yaml  polymarket_markets.yaml  strategies.yaml
backend/data/counter-trend/: COUNTER_TREND_DATA.xlsx
backend/data/live/: AAPL.csv  GOOG.csv  NVDA.csv  SON.csv  VOO.csv
backend/data/pairs/: Assignment_PAIRS_data.xlsx
backend/reports/: overlay_findings.md
backend/reports/regression/: sensitivity_regression_report.md
backend/scripts/: backfill_polymarket.py  overlay_comparison.py  run_regression.py
backend/tests/: test_backtest.py  test_overlay.py  test_regression.py  test_strategies.py
(+51 files in other folders)
