[project]
name = "vol-dashboard-backend"
version = "0.1.0"
description = "Backend for the multi-strategy trading dashboard"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pandas>=2.2",
    "numpy>=2.0",
    "plotly>=5.24",
    "openpyxl>=3.1",
    "yfinance>=0.2.40",
    "diskcache>=5.6",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
